Added database, added preliminary geocoding setup
