# backend/Controllers/DataController.cs
@@ -1,6 +1,8 @@
-using backend.Data;
+using backend.Db;
 using backend.Models;
+using backend.Services;
 using Microsoft.AspNetCore.Mvc;
+using Microsoft.EntityFrameworkCore;
 
 namespace backend.Controllers {
   [ApiController]
@@ -8,18 +10,67 @@ namespace backend.Controllers {
   public class DataController : Controller {
     private static readonly List<int> winterMonths = [11, 12, 1, 2, 3, 4];
     private readonly ILogger<DataController> _logger;
+    private readonly ApplicationDbContext _dbContext;
+    private readonly IGeocodingService _geocodingService;
 
-    public DataController(ILogger<DataController> logger) {
+    public DataController(ILogger<DataController> logger, ApplicationDbContext dbContext, IGeocodingService geocodingService) {
       _logger = logger;
+      _dbContext = dbContext;
+      _geocodingService = geocodingService;
     }
 
     [HttpGet()]
-    public ActionResult<DataModel> Get() {
+    public async Task<ActionResult<DataModel>> Get(float? latitude, float? longitude) {
       var dateTime = DateTime.Now;
-      if (winterMonths.Contains(dateTime.Month)) {
-        return new WinterDataModel().GetDataModel();
+
+      if (latitude != null && longitude != null) {
+        var cityTest = await _geocodingService.GetCityFromLatLong(latitude.Value, longitude.Value);
+        _logger.LogInformation(cityTest);
       }
-      return new SummerDataModel().GetDataModel();
+
+      var city = "Ottawa";
+      var season = GetCurrentSeason(dateTime);
+
+      var data = await (
+        from l in _dbContext.Locations
+        join s in _dbContext.LocationSeasons
+          on l.Id equals s.LocationId
+        where l.City == city && s.Season == season
+        select new DataModel {
+          Data = (
+            from d in s.Days
+            select new PeakDataDay {
+              DayOfWeek = d.Day,
+              Entries = (
+                from e in d.Entries
+                select new PeakDataEntry {
+                  Type = e.Type,
+                  Ranges = (
+                    from r in e.Ranges
+                    select new PeakDataHourRange {
+                      Start = r.StartHour,
+                      End = r.EndHour,
+                    }
+                  ),
+                }
+              ),
+            }
+          ),
+        }
+      ).FirstOrDefaultAsync();
+
+      if (data == null) {
+        return NotFound();
+      }
+
+      return data;
+    }
+
+    private PeakDataSeason GetCurrentSeason(DateTime dateTime) {
+      if (winterMonths.Contains(dateTime.Month)) {
+        return PeakDataSeason.Winter;
+      }
+      return PeakDataSeason.Summer;
     }
   }
 }
